--- a/index.html
+++ b/index.html
@@ -269,14 +269,21 @@
         <p>Fullstack Developer | Passionate about Creating Beautiful Web Experiences</p>
         <p>With a focus on delivering high-quality solutions, I specialize in turning ideas into reality. Let's collaborate to build something amazing!</p>
         <a href="#portfolio">Explore My Work and Discover What I Can Do for You!</a>
+        <div style="margin-top: 20px;">
+            <a href="https://www.linkedin.com/in/muhsin-adebayo/" target="_blank" style="color: #0011ff; text-decoration: none; margin-right: 15px;">
+                LinkedIn
+            </a>
+            <a href="https://github.com/adebayomuhsin" target="_blank" style="color: #3700ff; text-decoration: none;">
+                GitHub
+            </a>
+        </div>
     </div>
 </section>
-
     <!-- About Me Section -->
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <img src="https://scontent.flos5-1.fna.fbcdn.net/v/t39.30808-6/453808185_462620496638958_3112959331366089400_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeG9pzgSucTkVWAhdSV9zRxaYtZ6Vca0VNti1npVxrRU2zHHC-x6g6CLma5iMGjZ05WO1Jt--o3isQkYLuvOaGXv&_nc_ohc=RzJf-5Er6j0Q7kNvgEjjDgB&_nc_zt=23&_nc_ht=scontent.flos5-1.fna&_nc_gid=AOEgXkJzRa3ZLmD1RlUyEm7&oh=00_AYCeynQqyUT-qHGkyHrwbe9uEVZdHqvJqFDlSgxEZMVa2A&oe=671E7D4B" alt="Adebayo Muh'sin - Mufasir Tech">
+            <img src="https://scontent.flos5-2.fna.fbcdn.net/v/t39.30808-6/380539779_274245682143108_1176496881372830516_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeE8j_9pId7w5uPF5JoyRBXEue-tqvljzOG5762q-WPM4S5ZjIwdKDswEX1ViWaFQNeumNfLLGJe3pKtXEH9a689&_nc_ohc=IyZbYkjx4KoQ7kNvgHWlRmb&_nc_zt=23&_nc_ht=scontent.flos5-2.fna&_nc_gid=AmzTC8bOF6ftcjvDOYnDbcK&oh=00_AYBno1AxieJzGInOmhSQCj8ELgbl7Pj1hhH0v4f1ievAHA&oe=67458ADC" alt="Adebayo Muh'sin - Mufasir Tech">
             <p>I'm Adebayo Muh'sin, widely known as Mufasir Tech. As a dedicated fullstack developer, I specialize in
                 creating seamless, user-friendly web applications. My passion is turning complex problems into elegant
                 solutions, using modern web technologies to bring ideas to life.</p>
