--- a/index.html
+++ b/index.html
@@ -262,17 +262,17 @@
             <div class="portfolio-item">
                 <img src="images/project1.jpg" alt="Project 1">
                 <h3>Project 1</h3>
-                <p>A brief description of the project, highlighting key features and technologies used.</p>
+                <p>A responsive google form for someone abroad.</p>
             </div>
             <div class="portfolio-item">
-                <img src="images/project2.jpg" alt="Project 2">
+                <img src="https://www.petronas.com/" alt="Project 2">
                 <h3>Project 2</h3>
-                <p>A brief description of the project, highlighting key features and technologies used.</p>
+                <p>work as frontend developer for a team to build on responsive website for a fuel company  .</p>
             </div>
             <div class="portfolio-item">
-                <img src="images/project3.jpg" alt="Project 3">
+                <img src="https://adebayomuhsin.github.io/Kyc-project/" alt="Project 3">
                 <h3>Project 3</h3>
-                <p>A brief description of the project, highlighting key features and technologies used.</p>
+                <p>A kcy service to reduce the rate of fraud in the society.</p>
             </div>
         </div>
     </section>
