--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         /* Hero Section */
         #hero {
-            background: url('https://scontent.flos5-2.fna.fbcdn.net/v/t39.30808-6/380539779_274245682143108_1176496881372830516_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeE8j_9pId7w5uPF5JoyRBXEue-tqvljzOG5762q-WPM4S5ZjIwdKDswEX1ViWaFQNeumNfLLGJe3pKtXEH9a689&_nc_ohc=eUgMorX4dzQQ7kNvgGELeuQ&_nc_zt=23&_nc_ht=scontent.flos5-2.fna&_nc_gid=ADnlRvjHCPqz5K6TIGIaKLB&oh=00_AYBWK-mCB9E18cycstC2unWhT8gATyBO6zXjt4i3l4of2A&oe=67474CDC') no-repeat center center/cover;
+            background: url('') no-repeat center center/cover;
             height: 100vh;
             display: flex;
             align-items: center;
