--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio of Adebayo Muh'sin, a Fullstack Developer also known as Mufasir Tech.">
+    <meta name="keywords" content="Fullstack Developer, Web Development, Portfolio, Mufasir Tech">
+    <meta name="author" content="Adebayo Muh'sin">
     <title>Adebayo Muh'sin - Fullstack Developer (Mufasir Tech)</title>
     <style>
         /* Basic Reset */
@@ -56,7 +59,7 @@
 
         /* Hero Section */
         #hero {
-            background: url('') no-repeat center center/cover;
+            background: url('path-to-your-hero-image.jpg') no-repeat center center/cover;
             height: 100vh;
             display: flex;
             align-items: center;
@@ -115,82 +118,59 @@
             color: #ffd700;
         }
 
-        /* Keyframes for Animations */
-        @keyframes fadeInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+        /* Portfolio Section */
+        .portfolio-item {
+            text-align: center;
+            margin: 20px 0;
         }
 
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
+        .portfolio-item img {
+            width: 100%;
+            max-width: 400px;
+            border-radius: 10px;
+            margin-bottom: 10px;
         }
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 1;
-            }
+        .portfolio-item h3 {
+            margin-top: 10px;
         }
 
-        /* Responsive Layout Adjustments */
-        @media (max-width: 768px) {
-            #hero h1 {
-                font-size: 2rem;
-            }
-
-            #hero h2 {
-                font-size: 1.5rem;
-            }
-
-            #hero p {
-                font-size: 1rem;
-            }
-
-            nav a {
-                margin: 0 10px;
-                font-size: 16px;
-            }
+        /* Contact Section */
+        form input,
+        form textarea,
+        form button {
+            width: 100%;
+            margin-bottom: 10px;
+            padding: 10px;
+            font-size: 1rem;
         }
 
-        @media (max-width: 480px) {
-            #hero h1 {
-                font-size: 1.5rem;
-            }
+        form button {
+            background-color: #ffd700;
+            border: none;
+            color: #333;
+            cursor: pointer;
+        }
 
-            #hero h2 {
-                font-size: 1.2rem;
-            }
+        form button:hover {
+            background-color: #fff;
+        }
 
-            #hero p {
-                font-size: 0.9rem;
-            }
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #222;
+            color: #fff;
+        }
 
-            nav a {
-                margin: 0 5px;
-                font-size: 14px;
-            }
+        footer a {
+            color: #ffd700;
+            text-decoration: none;
+        }
 
-            .social-icons a {
-                font-size: 18px;
-            }
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -215,13 +195,12 @@
             <h1>Adebayo Muh'sin</h1>
             <h2>Popularly known as Mufasir Tech</h2>
             <p>Fullstack Developer | Passionate about Creating Beautiful Web Experiences</p>
-            <p>Let's build something amazing together!</p>
             <a href="#portfolio">Explore My Work!</a>
 
             <!-- Social Links -->
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/muhsin-adebayo/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/adebayomuhsin" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/muhsin-adebayo/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                <a href="https://github.com/adebayomuhsin" target="_blank" rel="noopener noreferrer">GitHub</a>
             </div>
         </div>
     </section>
